<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alert Me</string>
    <string name="no">Non</string>
    <string name="yes">Oui</string>
    <string name="saveLogin">Se souvenir de moi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">hello world</string>
    <string name="valider">Valider</string>
    <string name="hintUsername">Nom d\'utilisateur</string>
    <string name="hintMdp">Mot de passe</string>
    <string name="unknowUserMessage">Ce compte utilisateur n\'existe pas. Voulez vous le créer ?</string>
    <string name="createUserMessagePart1">Choisisez un nom d\'utilisateur ainsi qu\'un mot de passe sur l\'ecran de démarrage.</string>
    <string name="createUserMessagePart2">{fa-caret-right} cliquez sur \"Valider\"</string>
    <string name="createUserMessagePart3">{fa-caret-right} cliquez sur \"créer\" à l\'affichage de la pop-up</string>
    <string name="createUserTitle">Nouvel utilisateur !</string>
    <string name="create">Créer</string>
    <string name="cancel">Annuler</string>
    <string name="title_activity_your_alert">Mes Alertes</string>
    <string name="menu_title">Menu</string>
    <string name="title_activity_setting_welcome_page">SettingWelcomePage</string>
    <string name="welcome">Bienvenue</string>
    <string name="messageSettingPage1">Prenez quelques secondes afin de configurer l\'application</string>
    <string name="next">Suivant</string>
    <string name="previous">précédent</string>
    <string name="settings">Réglages</string>
    <string name="title_activity_activity_setting_email_phone">activity_setting_email_phone</string>
    <string name="new_user">Pas encore de compte ?</string>
    <string name="create_new_user_title">Inscription !</string>
    <string name="ok">OK</string>
    <string name="phone_and_email">E-mail &amp; phone</string>
    <string name="content_phone_email">Afin de recevoir au mieux vos alertes veuillez indiquer votre email ainsi que votre numéro de télèphone</string>
    <string name="hintPhone">Téléphone</string>
    <string name="hintEmail">E-mail</string>
    <string name="title_activity_accept_category_from_community">AcceptCategoryFromCommunity</string>
    <string name="content_accept_categories">Souhaitez-vous recevoir des catégories d\'autres utilisateurs. En acceptant vous recevrez de nouvelles catégories d\'alerte que vous pourrez garder ou supprimer par la suite. Si vous choisisez de refuser il vous sera toujours possible de modifier ce choix dans les paramètres.</string>
    <string name="accept_categories_choice">Accepter de nouvelles catégories.</string>
    <string name="title_choice_other_categories">Catégories de la communauté</string>
    <string name="titleConfirmDialog">Confirmation !</string>
    <string name="contentPart1PhoneAndEmailConfirmDialog">Un Email ainsi qu\'un SMS vous sera envoyer afin de confirmer vos informations.</string>
    <string name="contentPart1EmailConfirmDialog">Un Email vous sera envoyer afin de confirmer votre adresse Email.</string>
    <string name="contentPart1SmsConfirmDialog">Un SMS vous sera envoyer afin de confirmer votre numéro de téléphone.</string>
    <string name="contentPart1NoneConfirmDialog">Vous avez décider de ne pas recevoir d\'alertes par SMS ni email. Vous pourez toujours modifier ce choix dans l\'espace "Votre compte".</string>
    <string name="contentPart2PhoneAndEmailConfirmDialog">{fa-caret-right} Accéder à l\'espace "Votre compte"</string>
    <string name="contentPart3PhoneAndEmailConfirmDialog">{fa-caret-right} Recopiez les codes de confirmations que vous aurez reçus</string>
    <string name="contentPart3PhoneConfirmDialog">{fa-caret-right} Recopiez le code de confirmation reçu par SMS</string>
    <string name="contentPart3EmailConfirmDialog">{fa-caret-right} Recopiez le code de confirmation reçu par Email</string>
    <string name="save">Enregister</string>
    <string name="go">Continuez</string>
    <!-- Volet Navigation -->
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Item volet navigation -->
    <string-array name="nav_drawer_items">
        <item>Mes Alertes</item>
        <item>Nouvelle Alerte</item>
        <item>Mon Compte</item>
    </string-array>

    <!-- Navigation icon -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/plus</item>
        <item>@drawable/plus</item>
        <item>@drawable/user</item>
    </array>
    <!-- Content description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- home fragment -->
    <string name="title_alert_fragment">Mes Alertes</string>
    <string name="new_alert">Créer une alerte</string>

    <!-- new alert fragment -->
    <string name="title_new_alert_fragment">Nouvelle Alerte</string>

    <!-- my account fragment -->
    <string name="title_my_account_fragment">Mon Compte</string>
    <string name="personal_informations">Informations personnelles</string>
    <string name="txtAcceptNotifEmail">Accepter les notifications par E-mail</string>
    <string name="txtAcceptNotifPhone">Accepter les notifications par SMS</string>
    <string name="confirmations">Confirmations</string>
    <string name="codeConfirmationEmail">Code confirmation E-mail</string>
    <string name="codeConfirmationSms">Code confirmation SMS</string>
    <string name="newConfirCode">Recevoir un nouveau code de confirmation</string>
    <string name="stats">Statistiques</string>
    <string name="statAlertCreate">Nombre d\'alertes créées</string>
    <string name="statCategoriesCreate">Nombre de catégories créées</string>
    <string name="statCategoriesShare">Nombre de catégories partagées</string>
    <string name="statPoints">Nombre de points</string>

    <!-- New Alert fragment -->
    <string name="categoryChoice">Choissisez la categorie</string>
    <string name="share">Partager l\'alerte</string>
    <string name="title">Titre de l\'alerte</string>
    <string name="content">Contenu</string>
    <string name="seeTemplates">Voir les modéles</string>
    <string name="dateAndHourNotif">Date et heure de notification</string>
    <string name="day">Jour</string>
    <string name="week">Semaine</string>
    <string name="month">Mois</string>
    <string name="year">Année</string>
    <string name="hour">Heure</string>
    <string name="minute">Minutes</string>
    <string name="standard">Paramètres standard</string>
    <string name="advanced">Paramètres avancés</string>
    <string name="template">Modele d\'alerte</string>
    <string name="repeat">Récurrences</string>
    <string name="exceptions">Exceptions</string>
    <string name="chooseExceptions">Definir des Exceptions</string>
    <string name="hintRepeat">Tous les</string>
    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wenesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="sunday">Dimanche</string>
    <string name="explainTemplates">Cliquez sur un texte pour le choisir</string>
    <string name="january">Janvier</string>
    <string name="february">Fevrier</string>
    <string name="march">Mars</string>
    <string name="april">Avril</string>
    <string name="may">Mai</string>
    <string name="june">Juin</string>
    <string name="july">Juillet</string>
    <string name="august">Aout</string>
    <string name="september">Septembre</string>
    <string name="october">Octobre</string>
    <string name="november">Novembre</string>
    <string name="december">Decembre</string>
    <string name="title_activity_see_template_new_alert">SeeTemplateNewAlert</string>
    <string name="title_activity_see_template">SeeTemplate</string>

</resources>
