<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alertme.projet.alertme.AcceptCategoryFromCommunity">

    <TextView
        android:text="@string/content_accept_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/content_accept_categories"
        android:textSize="17sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accept_categories"
        android:padding="10dp"
        android:text="@string/accept_categories_choice"
        android:textSize="13dp"
        android:layout_below="@+id/content_accept_categories"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accept_choice"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:thumb="@drawable/switch_bg"
        android:track="@drawable/track_bg"
        android:layout_alignTop="@+id/accept_categories"
        android:layout_toEndOf="@+id/accept_categories" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_divider"
        android:showDividers="middle"
        android:layout_alignParentStart="false"
        android:id="@+id/linearLayout3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false">

        <Button
            android:id="@+id/button_accept_categories_previous"
            android:layout_weight="0.5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="5dp"
            android:text="@string/previous"
            android:background="@drawable/button_setting_bg"
            android:drawableStart="@drawable/previous"
            android:layout_gravity="bottom" />

        <Button
            android:id="@+id/button_accept_categories_next"
            android:layout_width="fill_parent"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:background="@drawable/button_setting_bg"
            android:drawableEnd="@drawable/next"/>
    </LinearLayout>

</RelativeLayout>
