<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_new_user_title"
        android:id="@+id/title"
        android:textColor="#fefefe"
        android:background="#18A1E7"
        android:drawableLeft="@drawable/warning"
        android:textAlignment="center"
        android:gravity="center"
        android:textIsSelectable="false"
        android:textSize="25dp"
        android:textStyle="bold"
        android:paddingEnd="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:background="@drawable/edittext_top_bg"
        android:padding="10dp"
        android:hint="@string/hintUsername"
        android:textColorHint="#bbbbbb"
        android:drawableLeft="@drawable/user"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mdp"
        android:background="@drawable/edittext_default_bg"
        android:layout_margin="-2dp"
        android:padding="10dp"
        android:hint="@string/hintMdp"
        android:textColorHint="#bbbbbb"
        android:drawableLeft="@drawable/mdp"/>
    </LinearLayout>