<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alertme.projet.alertme.Setting_email_phone">

    <TextView
        android:text="@string/content_phone_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/content_email_phone"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/email"
    android:inputType="textEmailAddress"
    android:background="@drawable/edittext_top_bg"
    android:padding="10dp"
    android:hint="@string/hintPhone"
    android:textColorHint="#bbbbbb"
        android:drawableLeft="@drawable/phone"
        android:layout_below="@+id/phone"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:layout_marginTop="34dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:inputType="phone"
        android:background="@drawable/edittext_top_bg"
        android:padding="10dp"
        android:hint="@string/hintEmail"
        android:singleLine="true"
        android:textColorHint="#bbbbbb"
        android:layout_below="@+id/content_email_phone"
        android:layout_alignParentStart="true"
        android:layout_marginTop="75dp"
        android:drawableLeft="@drawable/email"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_divider"
        android:showDividers="middle"
        android:layout_alignParentStart="false"
        android:id="@+id/linearLayout3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false">

        <Button
            android:id="@+id/button_previous"
            android:layout_weight="0.5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="5dp"
            android:text="@string/previous"
            android:background="@drawable/button_setting_bg"
            android:drawableStart="@drawable/previous"
            android:layout_gravity="bottom" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="fill_parent"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:background="@drawable/button_setting_bg"
            android:drawableEnd="@drawable/next"/>
    </LinearLayout>
</RelativeLayout>
