<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home"
    android:background="@drawable/backgroundrepeat">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/homeLogo">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logoalertodo"
        android:id="@+id/imageView"
        android:layout_marginBottom="-10dp"
        android:layout_marginLeft="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/alertodo"
        android:id="@+id/imageView2"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="51dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/homeLogo"
        android:background="@drawable/linearlayout_bg"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:inputType="text"
            android:background="@drawable/edittext_top_bg"
            android:padding="10dp"
            android:hint="@string/hintUsername"
            android:textColorHint="#BDBDBD"
            android:drawableLeft="@drawable/user"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mdp"
            android:background="@drawable/edittext_top_bg"
            android:layout_margin="-2dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/hintMdp"
            android:textColorHint="#BDBDBD"
            android:drawableLeft="@drawable/mdp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/saveLoginCheckbox"
                android:text="@string/saveLogin"
                android:button="@drawable/custom_checkbox"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:layout_weight="1.0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:text="@string/new_user"
                android:textColor="@color/grey"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:textAlignment="center"
                android:id="@+id/new_user"
                android:paddingTop="4dp"
                android:layout_gravity="center_vertical"/>
            </LinearLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarHome"
            style="?android:attr/progressBarStyleSmall"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnValider"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:text="@string/valider"
            android:background="@drawable/button_default_bg"/>
        </LinearLayout>

</RelativeLayout>
